fixed marketing layout issues

--- a/Modules/Reports/Resources/assets/css/reports.css
+++ b/Modules/Reports/Resources/assets/css/reports.css
@@ -1300,7 +1300,7 @@ h4.number{
 }
 
 .title-graph {
-    margin: 15px 10px 25px 5px;
+    margin: 15px 10px 15px 5px;
 }
 
 .box-states ul { 
